; ModuleID = '/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_formget_ccsid.c'
source_filename = "/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_formget_ccsid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_httppost = type { i32 }
%struct.TYPE_2__ = type { i32, i8*, i32 }

@Curl_formget_callback_ccsid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @curl_formget_ccsid(%struct.curl_httppost* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.curl_httppost*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_2__, align 8
  store %struct.curl_httppost* %0, %struct.curl_httppost** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %7, align 4
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 2
  store i32 %10, i32* %11, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i8* %12, i8** %13, align 8
  %14 = load i32, i32* %8, align 4
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i32 %14, i32* %15, align 8
  %16 = load %struct.curl_httppost*, %struct.curl_httppost** %5, align 8
  %17 = bitcast %struct.TYPE_2__* %9 to i8*
  %18 = load i32, i32* @Curl_formget_callback_ccsid, align 4
  %19 = call i32 @curl_formget(%struct.curl_httppost* %16, i8* %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @curl_formget(%struct.curl_httppost*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
